空白运单添加货物

--- a/lugang/res/layout/activity_stuff.xml
+++ b/lugang/res/layout/activity_stuff.xml
@@ -71,6 +71,17 @@
         
         <TextView
             style="@style/order"
+            android:text="包装" />
+
+        <Spinner 
+            android:id="@+id/pack"
+            android:layout_columnSpan="3"
+            android:layout_marginLeft="10dp" />
+
+        <View style="@style/line"/>
+         
+        <TextView
+            style="@style/order"
             android:text="总重量" />
 
         <Button android:layout_columnSpan="2"
