--- a/lugang/res/layout/calc_cubage.xml
+++ b/lugang/res/layout/calc_cubage.xml
@@ -532,6 +532,7 @@
             android:id="@+id/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/m3"
             android:textColor="@android:color/holo_red_dark"
             android:text="0" />
 
@@ -539,7 +540,7 @@
             android:id="@+id/unit_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:text="" />
 
     </LinearLayout>
     
