--- a/lugang/res/layout/activity_stuff.xml
+++ b/lugang/res/layout/activity_stuff.xml
@@ -135,10 +135,14 @@
             style="@style/order"
             android:text="运费" />
 
-        <Button android:layout_columnSpan="3"
+        <EditText android:layout_columnSpan="2"
             android:id="@+id/yf"
             style="@style/EditStyle"
+            android:inputType="numberDecimal"
             android:text="0.00"/>
+        <Button android:id="@+id/calc"
+            android:background="@drawable/calc_btn"
+            android:minHeight="1dp"/>
         
         <View style="@style/line"/>
         <TextView
@@ -181,6 +185,7 @@
         <EditText android:layout_columnSpan="3"
             android:id="@+id/bxf"
             style="@style/EditStyle"
+            android:enabled="false"
             android:inputType="numberDecimal"
             android:text="0.00"/>
         
