--- a/lugang/res/layout/calc_money.xml
+++ b/lugang/res/layout/calc_money.xml
@@ -24,12 +24,13 @@
             style="@style/order"
             android:id="@+id/zl"
             android:layout_width="90dp"
-            android:text="总量(kg)" />
+            android:text="总量" />
         
         <TextView android:layout_columnSpan="3"
             android:id="@+id/all"
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_blue_dark"
+            android:inputType="numberDecimal"
             android:text=""/>
         
         <TextView
