--- a/lugang/res/layout/tab3.xml
+++ b/lugang/res/layout/tab3.xml
@@ -12,9 +12,10 @@
         android:layout_gravity="bottom"
         android:layout_marginTop="150dp"
         android:orientation="vertical">
+    	<!-- 
     	<Button style="@style/tabone"
     	    android:id="@+id/history"
-        	android:text="@string/singlein"/>
+        	android:text="@string/singlein"/> -->
     
     	<Button style="@style/tabone"
     	    android:id="@+id/in"
