--- a/lugang/res/layout/activity_out.xml
+++ b/lugang/res/layout/activity_out.xml
@@ -14,14 +14,38 @@
 
     <include layout="@layout/logo" />
 
+    <RelativeLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <ListView
         android:id="@+id/stuffList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/linear"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1px"
         android:scrollingCache="false" >
     </ListView>
+    
+    <LinearLayout android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical" >
+    <Button android:id="@+id/again"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:visibility="gone"
+        android:text="继续添加"/>
+    <Button android:id="@+id/go"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:visibility="gone"
+        android:text="继续添加"/>
+    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
