--- a/lugang/res/layout/activity_stuff.xml
+++ b/lugang/res/layout/activity_stuff.xml
@@ -57,9 +57,9 @@
             android:inputType="number"
             android:text=""/>
         
-        <TextView android:layout_columnSpan="1"
-            android:id="@+id/totalUnit"
-            android:text="件" />
+        <Spinner android:layout_columnSpan="1"
+            android:id="@+id/totalUnit" />
+        
         </GridLayout>
         
         <GridLayout android:layout_width="wrap_content"
