--- a/lugang/res/layout/activity_login.xml
+++ b/lugang/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:singleLine="true"
-        android:drawableLeft="@drawable/icon_user"
+        android:drawableLeft="@drawable/account_icon"
         android:drawableRight="@drawable/delete_selector"
         android:background="@drawable/login_edittext_bg"
         android:inputType="textPassword"
@@ -52,6 +52,7 @@
         android:id="@+id/login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:minHeight="1dp"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="100dp"
