--- a/lugang/res/layout/header.xml
+++ b/lugang/res/layout/header.xml
@@ -28,6 +28,7 @@
         android:id="@+id/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="1dp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:paddingLeft="10dp"
