--- a/lugang/res/values/styles.xml
+++ b/lugang/res/values/styles.xml
@@ -98,6 +98,7 @@
     <style name="tabone">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:minHeight">1dp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:textSize">25sp</item>
