--- a/lugang/res/layout/activity_issue_stuff.xml
+++ b/lugang/res/layout/activity_issue_stuff.xml
@@ -11,6 +11,18 @@
         android:background="#33B5E5"/>
     <include layout="@layout/logo"/>
 
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/list_stuff"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:cacheColorHint="#00000000"
+        android:dividerHeight="1px"
+        android:divider="@android:color/darker_gray"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:smoothScrollbar="true" />
      
 
 </LinearLayout>
