--- a/lugang/res/layout/issue_stuff_item.xml
+++ b/lugang/res/layout/issue_stuff_item.xml
@@ -69,6 +69,7 @@
         android:id="@+id/show"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="horizontal" >
 
         <Button
