--- a/lugang/res/layout/activity_issue_stuff.xml
+++ b/lugang/res/layout/activity_issue_stuff.xml
@@ -1,28 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
-    
-    <include layout="@layout/header"/>
-    
-    <View android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#33B5E5"/>
-    <include layout="@layout/logo"/>
 
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/list_stuff"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000"
-        android:dividerHeight="1px"
-        android:divider="@android:color/darker_gray"
-        android:fadingEdge="none"
-        android:fastScrollEnabled="false"
-        android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false"
-        android:smoothScrollbar="true" />
-     
+    <include layout="@layout/header" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#33B5E5" />
+
+    <include layout="@layout/logo" />
+
+    
 
 </LinearLayout>
