--- a/lugang/res/layout/activity_notice.xml
+++ b/lugang/res/layout/activity_notice.xml
@@ -9,10 +9,17 @@
         android:layout_height="2dp"
         android:background="#33B5E5"/>
     <include layout="@layout/logo"/>
-    <ListView android:id="@+id/list_notice"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:divider="@android:color/transparent">
-        </ListView>
+        
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/list_notice"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="@android:color/transparent"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:smoothScrollbar="true" />
 
 </LinearLayout>
