--- a/lugang/res/layout/activity_stuff_list.xml
+++ b/lugang/res/layout/activity_stuff_list.xml
@@ -1,27 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:orientation="vertical" >
-
+    
     <include layout="@layout/header"/>
+    
     <View android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#33B5E5"/>
     <include layout="@layout/logo"/>
-    <include layout="@layout/assign_header"/>
-    
+
     <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/list_assign"
+        android:id="@+id/list_stuff"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
-        android:divider="@android:color/transparent"
+        android:dividerHeight="1px"
+        android:divider="@android:color/darker_gray"
         android:fadingEdge="none"
         android:fastScrollEnabled="false"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
         android:smoothScrollbar="true" />
+     
 
 </LinearLayout>
